--- a/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -63,7 +63,7 @@ custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
 custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇦🇸 亚洲节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]英国节点`[]俄国节点`[]澳洲节点`[]印度节点`[]特供节点`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇦🇸 亚洲节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🆒 特供节点`[]🚀 手动切换
 custom_proxy_group=🇦🇸 亚洲节点`select`(亚洲|AS|Asia)
 custom_proxy_group=🇭🇰 香港节点`select`(香港|HK|Hong Kong)
 custom_proxy_group=🇨🇳 台湾节点`select`(台湾|新北|彰化|TW|Taiwan)
