--- a/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -50,8 +50,8 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=📲 电报消息`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=📹 油管视频`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
-custom_proxy_group=📺 巴哈姆特`select`[]DIRECT`[]🇨🇳 台湾节点`[]🚀 手动切换
-custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
+custom_proxy_group=📺 巴哈姆特`select`[]DIRECT`[]🇹🇼 台湾节点`[]🚀 手动切换
+custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
 custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
