--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -47,12 +47,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=📲 电报消息`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
-custom_proxy_group=📹 油管视频`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
-custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
-custom_proxy_group=📺 巴哈姆特`select`[]DIRECT`[]🇹🇼 台湾节点`[]🚀 手动切换
-custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
@@ -61,8 +61,8 @@ custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🌏 
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
-custom_proxy_group=🍃 应用净化`select`[]DIRECT`[]REJECT
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=🌏 亚洲节点`select`(亚洲|AS|Asia)
 custom_proxy_group=🇭🇰 香港节点`select`(香港|HK|Hong Kong)
