--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -71,7 +71,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🌏 亚洲节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇷🇺 俄国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=🌏 亚洲节点`select`(亚洲|AS|Asia)
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|[^-]港|Hong Kong)
-custom_proxy_group=🇹🇼 台湾节点`select`(台|新北|彰化||[^-]台TW|Taiwan)
+custom_proxy_group=🇹🇼 台湾节点`select`(台|新北|彰化|[^-]台|TW|Taiwan)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=🇰🇷 韩国节点`select`(韩|韓|首尔|[^-]韩|KR|KOR|Korea)
 custom_proxy_group=🇸🇬 狮城节点`select`(新|坡|狮城|[^-]新|SG|Singapore)
