--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -36,6 +36,7 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Dmm.list
 ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Niconico.list
 ruleset=🇸🇬 狮城节点,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/AreaSingapore.list
+ruleset=🇺🇸 美国节点,https://raw.githubusercontent.com/MJCCode/Clash/main/ruleset/AreaAmerica.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/NodeSelect.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
