--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -23,9 +23,10 @@ ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/ma
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎮 游戏平台-Epic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮 游戏平台-Steam,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎮 游戏平台-Sony,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=🎮 游戏平台-其他,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/GamePlatform-Other.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🏰 Disney+,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
@@ -35,7 +36,6 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Dmm.list
 ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Niconico.list
-ruleset=🇸🇬 狮城节点,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/AreaSingapore.list
 ruleset=🇺🇸 美国节点,https://raw.githubusercontent.com/MJCCode/Clash/main/ruleset/AreaAmerica.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/NodeSelect.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
@@ -65,7 +65,10 @@ custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台-Epic`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台-Steam`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台-Sony`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台-其他`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
