--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -65,10 +65,10 @@ custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
-custom_proxy_group=🎮 Epic游戏`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
-custom_proxy_group=🎮 蒸汽动力`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
-custom_proxy_group=🎮 索尼游戏`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换
-custom_proxy_group=🎮 其他游戏`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
+custom_proxy_group=🎮 Epic游戏`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
+custom_proxy_group=🎮 蒸汽动力`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
+custom_proxy_group=🎮 索尼游戏`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换
+custom_proxy_group=🎮 其他游戏`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
@@ -85,6 +85,7 @@ custom_proxy_group=🇦🇺 澳洲节点`select`(澳|AU|AUS|Australia)
 custom_proxy_group=🇮🇳 印度节点`select`(印度|IN|IND|India)
 custom_proxy_group=🇷🇺 俄国节点`select`(俄|RU|RUS|Russian)
 custom_proxy_group=🗺 特供节点`select`(特供)
+custom_proxy_group=🎮 游戏专线`select`(game|游戏)
 ;设置分组标志位
 
 enable_rule_generator=true
