--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -36,6 +36,7 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🇯🇵 日本站点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Dmm.list
 ruleset=🇯🇵 日本站点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Niconico.list
+ruleset=🌐 其他站点,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/OtherSite.list
 ruleset=🌐 访问机场,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/Airports.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -69,13 +70,14 @@ custom_proxy_group=🎮 蒸汽动力`select`[]DIRECT`[]🎮 游戏专线`[]🚀 
 custom_proxy_group=🎮 索尼游戏`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=🎮 其他游戏`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=🇯🇵 日本站点`select`[]🇯🇵 日本节点`[]🚀 手动切换
-custom_proxy_group=🌐 访问机场`select`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🇯🇵 日本站点`select`[]DIRECT`[]🇯🇵 日本节点`[]🚀 手动切换
+custom_proxy_group=🌐 其他站点`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🚀 手动切换
+custom_proxy_group=🌐 访问机场`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
+custom_proxy_group=🇭🇰 香港节点`select`(港|HK|HongKong|Hong Kong)
 custom_proxy_group=🇹🇼 台湾节点`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|广日|JP|Japan)
 custom_proxy_group=🇰🇷 韩国节点`select`(韩|韓|首尔|KR|KOR|Korea)
