--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -76,7 +76,7 @@ custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🇷🇺 俄国节点`[]🗺 特供节点`🎮 游戏专线`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇮🇳 印度节点`[]🇷🇺 俄国节点`[]🗺 特供节点`[]🎮 游戏专线`[]🚀 手动切换
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|HongKong|Hong Kong)
 custom_proxy_group=🇹🇼 台湾节点`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|广日|JP|Japan)
