--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -36,6 +36,7 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌸 日本站点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Dmm.list
 ruleset=🌸 日本站点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Niconico.list
+ruleset=🗽 美国站点,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/AreaUS.list
 ruleset=🌐 其他站点,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/OtherSite.list
 ruleset=🌐 访问机场,https://raw.githubusercontent.com/MJCCode/Clash/master/ruleset/Airports.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
@@ -70,6 +71,7 @@ custom_proxy_group=🎮 蒸汽动力`select`[]DIRECT`[]🎮 游戏专线`[]🚀 
 custom_proxy_group=🎮 索尼游戏`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=🎮 其他游戏`select`[]DIRECT`[]🎮 游戏专线`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换
 custom_proxy_group=🌸 日本站点`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🗽 美国站点`select`[]🇺🇸 美国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🌐 其他站点`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌐 访问机场`select`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易|音乐|解锁|Music|NetEase)
