--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -59,6 +59,7 @@ custom_proxy_group=🚀 手动切换①`select`.*
 custom_proxy_group=🚀 手动切换②`select`.*
 custom_proxy_group=🚀 手动切换③`select`.*
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
+custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
 custom_proxy_group=🏰 Disney+`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
