--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -24,11 +24,11 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-ruleset=🎮 Epic游戏,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=🎮 蒸汽游戏,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=🎮 暴雪游戏,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Blizzard.list
-ruleset=🎮 艺电游戏,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-ruleset=🎮 索尼游戏,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=🎮 Epic平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮 蒸汽平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎮 暴雪平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Blizzard.list
+ruleset=🎮 艺电平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
+ruleset=🎮 索尼平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
@@ -71,11 +71,11 @@ custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
-custom_proxy_group=🎮 Epic游戏`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
-custom_proxy_group=🎮 蒸汽游戏`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
-custom_proxy_group=🎮 暴雪游戏`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
-custom_proxy_group=🎮 艺电游戏`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
-custom_proxy_group=🎮 索尼游戏`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
+custom_proxy_group=🎮 Epic平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
+custom_proxy_group=🎮 蒸汽平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
+custom_proxy_group=🎮 暴雪平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
+custom_proxy_group=🎮 艺电平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
+custom_proxy_group=🎮 索尼平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
 custom_proxy_group=🌸 日本站点`select`[]🇯🇵 日本节点`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
 custom_proxy_group=🗽 美国站点`select`[]🇺🇸 美国节点`[]🚀 节点选择`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
 custom_proxy_group=🌐 其他站点`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇺🇸 美国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③`[]DIRECT
