--- a/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
+++ b/config/ACL4SSR_Online_Full_NoAuto_Mod.ini
@@ -91,7 +91,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇸 美国节点`[]🇬🇧 英国节点`[]🇦🇺 澳洲节点`[]🇷🇺 俄国节点`[]🚀 手动切换①`[]🚀 手动切换②`[]🚀 手动切换③
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|HongKong|Hong Kong)
 custom_proxy_group=🇹🇼 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🇸🇬 狮城节点`select`(新|坡|狮城|SG|Singapore)
+custom_proxy_group=🇸🇬 狮城节点`select`(新加坡|狮城|SG|Singapore)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|广日|JP|Japan)
 custom_proxy_group=🇰🇷 韩国节点`select`(韩|韓|首尔|KR|KOR|Korea)
 custom_proxy_group=🇺🇸 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
